"work in class"

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <h5 class="EastBoston_byline">By DAN SPECTOR, Northeastern University</h5>
 
 
-          <p>East Boston is a gentifying neighborhood bordering Logan Airport.
+          <p>East Boston is a gentrifying neighborhood bordering Logan Airport.
             Recent years have seen marked increases in rent prices, as residents priced out of downtown seek more affordable housing.
-             This has caused much strife in what has traditionally been a low-income, immigrant community.</p>
-          <p>Distributing no more than 30 percent of income towards rent has long been accepted as a benchmark in personal finance.
-             Those who allocate more than 30 percent of their rent are said to be living in rent poverty.</p>
+             This has caused much disruption in what has traditionally been a low-income, immigrant community.</p>
+          <!--Distributing no more than 30 percent of income towards rent has long been accepted as a benchmark in personal finance.-->
 
 
           <h2 class="EastBoston_head">Rent Poverty in East Boston</h2>
-
+          <p style="color: #e45525; font-weight: bold;">Those who allocate more than 30 percent of their monthly household income to pay for housing are said to be living in rent poverty.</p>
+          <!-- <p>KEY Average rent for a <strong><span style="color:green">one-bedroom</span> </strong>and three-bedroom home Rent poverty line (30% of monthly household income)</p> -->
       </div>
       <div class="row svg_container">
 
