"uploaded final code"

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p style="color: #e45525; font-weight: bold;">Those who allocate more than 30 percent of their monthly household income to pay for housing are said to be living in rent poverty.</p>
           <!-- <p>KEY Average rent for a <strong><span style="color:green">one-bedroom</span> </strong>and three-bedroom home Rent poverty line (30% of monthly household income)</p> -->
       </div>
-      <div class="row svg_container">
+      <div class="row svg_container" id="resize">
 
       </div>
   </div>
@@ -90,6 +90,7 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
+
   <script src="js/main.js"></script>
 </body>
 </html>
