"added base map"

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
- <link rel="stylesheet" href="css/EastBoston_styles.css">
-
-
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/skeleton.css">
+<link rel="stylesheet" href="css/EastBoston_styles.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -81,6 +79,12 @@
       <div class="row svg_container" id="resize">
 
       </div>
+
+      <div class="row map_container" id="resize">
+
+      </div>
+
+
   </div>
 </div>
 
@@ -89,7 +93,8 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
-
+  <script src="js/neighborhoods.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/map.js"></script>
 </body>
 </html>
