--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://unpkg.com/d3-simple-slider@0.2.0/build/d3-simple-slider.js"></script>
   <script src="js/neighborhoods.js"></script>
   <script src="js/main.js"></script>
   <script src="js/map.js"></script>
