--- a/index.html
+++ b/index.html
@@ -67,22 +67,35 @@
         <h5 class="EastBoston_byline">By DAN SPECTOR, Northeastern University</h5>
 
 
-          <p>East Boston is a gentrifying neighborhood bordering Logan Airport.
+        <p>East Boston is a gentrifying neighborhood bordering Logan Airport.
             Recent years have seen marked increases in rent prices, as residents priced out of downtown seek more affordable housing.
-             This has caused much disruption in what has traditionally been a low-income, immigrant community.</p>
+            This has caused much disruption in what has traditionally been a low-income, immigrant community.
+        </p>
 
 
           <h2 class="EastBoston_head">Rent Poverty in East Boston</h2>
           <p style="color: #e45525; font-weight: bold;">Those who allocate more than 30 percent of their monthly household income to pay for housing are said to be living in rent poverty.</p>
           <!-- <p>KEY Average rent for a <strong><span style="color:green">one-bedroom</span> </strong>and three-bedroom home Rent poverty line (30% of monthly household income)</p> -->
       </div>
+
       <div class="row svg_container" id="resize">
 
       </div>
 
+      <br>
+      <br>
+
+      <h2 class="EastBoston_head">How Far Does a Salary Go?</h2>
+      <p>The following map displays <span class="onebedroom">one bedroom</span> and
+        <span class="threebedroom">three bedroom</span> apartments. Select an annual salary to see which apartments
+        remain affordable according to the rent poverty rule.
+      </p>
+
       <div class="row map_container" id="resize">
 
       </div>
+
+
 
 
   </div>
