--- a/index.html
+++ b/index.html
@@ -86,10 +86,15 @@
       <br>
 
       <h2 class="EastBoston_head">How Far Does a Salary Go?</h2>
+
+    <div class="EastBoston">
       <p>The following map displays <span class="onebedroom">one bedroom</span> and
         <span class="threebedroom">three bedroom</span> apartments. Select an annual salary to see which apartments
         remain affordable according to the rent poverty rule.
       </p>
+    </div>
+
+
 
       <div class="row map_container" id="resize">
 
