--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="EastBoston">
       <p>The following map displays <span class="onebedroom">one bedroom</span> and
         <span class="threebedroom">three bedroom</span> apartments. Select an annual salary to see which apartments
-        remain affordable according to the rent poverty rule.
+        remain affordable according to the rent poverty rule. This data is from the year 2017.
       </p>
     </div>
 
