"updated hamburger menu"

--- a/index.html
+++ b/index.html
@@ -29,34 +29,30 @@
 </head>
 <body>
 
-<!-- Hamburger menu
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <nav role="navigation" class="EastBoston_nav" >
-  <div id="menuToggle">
-    <!--
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
-    <input type="checkbox" />
+  <!-- Hamburger menu
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <nav role="navigation" class="EastBoston_nav" >
+    <div id="menuToggle">
+      <!--
+      A fake / hidden checkbox is used as click reciever,
+      so you can use the :checked selector on it.
+      -->
+      <input type="checkbox" />
 
-    <!--
-    Some spans to act as a hamburger.
-    -->
-    <span></span>
-    <span></span>
-    <span></span>
+      <!--
+      Some spans to act as a hamburger.
+      -->
+      <span></span>
+      <span></span>
+      <span></span>
 
-    <ul id="menu">
-        <a href="#" ><li style="font-size:4rem">Article 1</li></a>
-        <a href="#"><li style="font-size:4rem">Article 2</li></a>
-        <a href="#"><li style="font-size:4rem">Article 3</li></a>
-        <a href="#"><li style="font-size:4rem">Article 4</li></a>
-        <a href="#"><li style="font-size:4rem">Article 5</li></a>
-        <a href="#"><li style="font-size:4rem">Article 6</li></a>
-
-    </ul>
-  </div>
-</nav>
+      <ul id="menu">
+          <a href="https://web.northeastern.edu/visualizingeastie/the-people" ><li style="font-size:4rem">The people</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-environment"><li style="font-size:4rem">The environment</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-built-city"><li style="font-size:4rem">The built city</li></a>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -99,6 +95,14 @@
       <div class="row map_container" id="resize">
 
       </div>
+
+    <br>
+    <br>
+
+    <div class="EastBoston">
+      <p>Data sourced from <a href="https://www.jefftk.com/apartment_prices/data-listing">Jeff Kaufman</a>, who scraped from PadMapper.</p>
+
+    </div>
 
 
 
