--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 </head>
 <body>
 
+  <!-- Custom Fonts -->
+  <style>
+  @font-face {
+   font-family: "GrifoL-Bold";
+    src: url(https://web.northeastern.edu/visualizingeastie/fonts/Grifo-L-Bold.otf);
+  }
+      body {font-family: "GrifoL-Bold","Georgia",serif}
+  @font-face {
+   font-family: "BentonSansCond-Bold";
+    src: url(https://web.northeastern.edu/visualizingeastie/fonts/BentonSansCond-Bold.otf);
+  }
+      body {font-family: "BentonSansCond-Bold","Helvetica",sans-serif}
+  </style>
+
   <!-- Hamburger menu
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav role="navigation" class="EastBoston_nav" >
@@ -46,14 +60,16 @@
       <span></span>
       <span></span>
 
-      <ul id="menu">
-          <a href="https://web.northeastern.edu/visualizingeastie/the-people" ><li style="font-size:4rem">The people</li></a>
-          <a href="https://web.northeastern.edu/visualizingeastie/the-environment"><li style="font-size:4rem">The environment</li></a>
-          <a href="https://web.northeastern.edu/visualizingeastie/the-built-city"><li style="font-size:4rem">The built city</li></a>
+      <ul id="menu" >
+          <a href="https://web.northeastern.edu/visualizingeastie" ><li style="font-size: 3rem; line-height: 3rem">All stories</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-people" ><li style="font-size: 3rem; line-height: 3rem">The people</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-environment "><li style="font-size: 3rem; line-height: 3rem">The environment</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-built-city"><li style="font-size: 3rem; line-height: 3rem">The built city</li></a>
+          <a href="https://web.northeastern.edu/visualizingeastie/the-institutions"><li style="font-size: 3rem; line-height: 3rem">The institutions</li></a>
       </ul>
-    </div>
+      </div>
   </nav>
-
+  
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
